Add Graph Template